feat: add clear button and keyboard shortcut for textarea
Enhanced user experience by adding a clear button to the phrase input textarea
and implementing a keyboard shortcut for quick text clearing.

Changes made:
• Added clear button (✕) positioned absolutely within textarea container
• Implemented Ctrl+Backspace keyboard shortcut to clear input
• Added responsive styling for mobile devices with larger touch target
• Enhanced textarea padding to accommodate clear button
• Added keyboard shortcut documentation in help modal
• Implemented auto-show/hide functionality based on input content
• Added proper ARIA labels and focus management for accessibility

Reason:
• Improve user experience by providing quick way to clear input text
• Address usability gap where users had to manually select and delete text
• Enhance mobile accessibility with touch-friendly clear button

Impact:
• Users can now quickly clear input using visual button or keyboard shortcut
• Improved mobile experience with appropriately sized touch targets
• Better accessibility with proper ARIA labels and keyboard navigation
• Enhanced visual feedback with hover and active states

Test:
• Verified clear button appears/disappears based on input content
• Tested Ctrl+Backspace shortcut functionality across browsers
• Validated mobile responsiveness and touch target sizing
• Confirmed accessibility features work with screen readers

Compatibility:
• Fully backward compatible - existing functionality unchanged
• Progressive enhancement approach ensures graceful degradation
• No breaking changes to existing keyboard shortcuts or UI

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
                 </div>
                 <button class="refresh-suggestions-btn" onclick="refreshSuggestions()" aria-label="Get new suggestions">
                     🔄 More Suggestions
-                </button>
-            </div>
+                </button>        </div>
         </div>
           
-        <textarea id="phraseInput" placeholder="Enter your phrase here..."></textarea>
+        <div class="textarea-container">
+            <textarea id="phraseInput" placeholder="Enter your phrase here..."></textarea>
+            <button id="clearBtn" class="clear-button" aria-label="Clear text" title="Clear text (Ctrl+Backspace)" style="display: none;">✕</button>
+        </div>
         
         <!-- Password Strength Meter -->
         <div id="strengthMeter"></div>
@@ -105,6 +107,10 @@
                         </div>                        <div class="shortcut-item">
                             <span class="shortcut-keys">Ctrl + C</span>
                             <span class="shortcut-desc">Copy password (when focused)</span>
+                        </div>
+                        <div class="shortcut-item">
+                            <span class="shortcut-keys">Ctrl + Backspace</span>
+                            <span class="shortcut-desc">Clear input text</span>
                         </div>
                         <div class="shortcut-item">
                             <span class="shortcut-keys">📱 Button</span>
