docs: add comprehensive FAQ with security, accessibility, and deployment guides
Added detailed FAQ.md covering user questions about security, usage, installation,
and accessibility. Updated navigation links and documentation index.

Reason:
• Address common user questions about data privacy and security
• Provide clear guidance on installation across different platforms
• Enhance accessibility documentation for inclusive usage
• Reduce support requests through comprehensive self-service documentation

Impact:
• Improved user onboarding with instant answers to security concerns
• Better accessibility compliance documentation for diverse users
• Reduced barrier to deployment with step-by-step hosting guides
• Enhanced developer contribution guidelines and technical explanations

Docs:
• Added 424-line FAQ.md with 12 categorized sections
• Updated INDEX.md to include FAQ navigation link
• Enhanced README.md with FAQ reference and streamlined tutorial section
• Added FAQ link to footer navigation in index.html

Compatibility:
• No breaking changes to existing functionality
• Pure documentation enhancement with no code impact
• Maintains existing URL structure and navigation patterns

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <span id="footer-version" aria-live="polite"></span><br />
             Built with ❤️ by Dhruvin Soni
             (<a href="https://github.com/dhruvinrsoni" target="_blank" rel="noopener">@dhruvinrsoni</a>)<br />
-            <small>Copyright (c) 2025 Dhruvin Rupesh Soni</small><br />
-            <a href="https://github.com/dhruvinrsoni/cipher-alchemist" target="_blank" rel="noopener">GitHub Project</a> • 
-            <a href="https://www.youtube.com/@dhruvinrsoni" target="_blank" rel="noopener">📺 Video Tutorials</a><br /></footer>
+            <small>Copyright (c) 2025 Dhruvin Rupesh Soni</small><br />            <a href="https://github.com/dhruvinrsoni/cipher-alchemist" target="_blank" rel="noopener">GitHub Project</a> • 
+            <a href="https://www.youtube.com/@dhruvinrsoni" target="_blank" rel="noopener">📺 Video Tutorials</a> • 
+            <a href="https://github.com/dhruvinrsoni/cipher-alchemist/blob/main/docs/FAQ.md" target="_blank" rel="noopener">❓ FAQ</a><br /></footer>
     </div>
 
     <!-- Keyboard Shortcuts Help Modal -->
