feat: Implement modern notification system and reorganize architecture
This commit transforms the user experience with beautiful, modern notifications while streamlining the project architecture for better maintainability and testing.

Reason:
• Replace jarring alert() popups with professional notification system
• Clean up project structure by moving archive files to dedicated folder
• Improve testing infrastructure with enhanced dashboards and validation
• Address user experience issues with native-like notifications

Impact:
• Users now see beautiful, dismissible notifications instead of browser alerts
• Hover-to-pause functionality prevents accidental dismissal
• Text selection support in notifications for copying error messages/URLs
• Streamlined file organization improves developer navigation
• Enhanced testing capabilities with popup blocker detection and management
• Auto-closing test windows prevent browser tab clutter

Changes:
• Added modern notification system (css/notifications.css, js/notifications.js)
• Replaced alert() calls with modernAlert() throughout codebase
• Created testlab.html - comprehensive testing dashboard with weighted results
• Added notification-demo.html showcasing all notification features
• Moved legacy files to archive/ folder for cleaner project structure
• Enhanced dev.html with popup management and better result tracking
• Updated all documentation with network serving instructions for mobile testing
• Integrated notification system into main app (index.html)

Technical Details:
• Notifications support auto-timeout, manual dismissal, and type-based styling
• Glassmorphism design with smooth animations and mobile responsiveness
• Smart test result aggregation with priority-weighted status calculation
• Popup blocker detection and user-friendly fallback instructions
• No new external dependencies - pure vanilla CSS/JS implementation

Test:
• All notification types tested (success, error, warning, info)
• Cross-browser compatibili

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/phrase-suggestions.css" />
     <link rel="stylesheet" href="css/keyboard-shortcuts.css" />
     <link rel="stylesheet" href="css/sharing.css" />
+    <link rel="stylesheet" href="css/notifications.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="assets/icons/favicon.ico" />
     <link rel="apple-touch-icon" href="assets/icons/favicon-192.png" />
@@ -188,6 +189,7 @@
     </div>    <!-- Core Configuration and Cipher Algorithms -->
     <script src="js/config.js" defer></script>
     <script src="js/cipher-algorithms.js" defer></script>
+    <script src="js/notifications.js" defer></script>
     
     <!-- Main App (Contains all core functionality) -->
     <script src="js/main.js" defer></script>
