refactor: remove advanced features and related code
Refactored codebase to remove advanced features for simplification.

- Removed plugin manager, advanced search, file operations, and dark mode plugin from UI and logic
- Deleted related keyboard shortcuts and initialization code
- Cleaned up theme manager to eliminate plugin integration
- Updated service worker to stop caching removed scripts
- Adjusted config and documentation comments for clarity

Impact:
- Reduces code complexity and maintenance overhead
- No new dependencies introduced
- No changes to CI/CD, runtime, database, security, or cloud integration
- No impact on code style, logging, review, code quality, or coverage
- No changes in code ownership

Testing and Validation:
- Manual regression testing required to ensure core features remain functional

Backward Compatibility:
- BREAKING CHANGE: Advanced features and their APIs are no longer available

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/dev.html
+++ b/dev.html
@@ -454,64 +454,7 @@
 
         <!-- Advanced Features Section -->
         <div class="advanced-features-section">
-            <h2>🚀 Advanced Features</h2>
-            <div class="test-grid">
-                <!-- Plugin Manager Test -->
-                <div class="test-card">
-                    <div class="test-card-header">
-                        <div class="test-card-title">🧩 Plugin Manager</div>
-                        <div class="test-status pending" id="plugin-status">READY</div>
-                    </div>
-                    <div class="test-description">Test plugin loading, registration, and lifecycle management</div>
-                    <div class="test-actions">
-                        <button class="test-btn primary" onclick="testPluginManager()">🧩 Test</button>
-                        <button class="test-btn info" onclick="openPluginManager()">🔧 Open Manager</button>
-                    </div>
-                    <div class="test-results" id="plugin-results">Ready to test plugin manager...</div>
-                </div>
-
-                <!-- Advanced Search Test -->
-                <div class="test-card">
-                    <div class="test-card-header">
-                        <div class="test-card-title">🔍 Advanced Search</div>
-                        <div class="test-status pending" id="search-status">READY</div>
-                    </div>
-                    <div class="test-description">Test search functionality, filters, and history management</div>
-                    <div class="test-actions">
-                        <button class="test-btn primary" onclick="testAdvancedSearch()">🔍 Test</button>
-                        <button class="test-btn info" onclick="openAdvancedSearch()">🔍 Open Search</button>
-                    </div>
-                    <div class="test-results" id="search-results">Ready to test advanced search...</div>
-                </div>
-
-                <!-- File Operations Test -->
-                <div class="test-card">
-                    <div class="test-card-header">
-                        <div class="test-card-title">📁 File Operations</div>
-                        <div class="test-status pending" id="file-status">READY</div>
-                    </div>
-                    <div class="test-description">Test import/export of phrases, config, and batch operations</div>
-                    <div class="test-actions">
-                        <button class="test-btn primary" onclick="testFileOperations()">📁 Test</button>
-                        <button class="test-btn info" onclick="openFileOperations()">📁 Open Manager</button>
-                    </div>
-                    <div class="test-results" id="file-results">Ready to test file operations...</div>
-                </div>
-
-                <!-- Dark Mode Plugin Test -->
-                <div class="test-card">
-                    <div class="test-card-header">
-                        <div class="test-card-title">🌙 Dark Mode Plugin</div>
-                        <div class="test-status pending" id="darkmode-status">READY</div>
-                    </div>
-                    <div class="test-description">Test dark mode plugin registration and theme switching</div>
-                    <div class="test-actions">
-                        <button class="test-btn primary" onclick="testDarkModePlugin()">🌙 Test</button>
-                        <button class="test-btn info" onclick="toggleDarkModePlugin()">🌙 Toggle</button>
-                    </div>
-                    <div class="test-results" id="darkmode-results">Ready to test dark mode plugin...</div>
-                </div>
-            </div>
+            <!-- Removed advanced features: plugin manager, advanced search, file operations, dark mode plugin -->
         </div>
 
         <!-- Performance Metrics -->
