--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Cipher Alchemist">
-    <meta name="application-name" content="Cipher Alchemist">    <meta property="og:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />
+    <meta name="application-name" content="Cipher Alchemist">    
+    <meta property="og:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />
     <meta property="og:description" content="🔮 Transform memorable phrases into cryptographically strong passwords with inspirational suggestions and real-time strength analysis. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />    <meta property="og:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/assets/icons/favicon-512.png" />    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />    <meta name="twitter:description" content="🔮 Transform memorable phrases into cryptographically strong passwords with real-time strength analysis. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
+    <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />    
+    <meta property="og:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/assets/icons/favicon-512.png" />    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />    
+    <meta name="twitter:description" content="🔮 Transform memorable phrases into cryptographically strong passwords with real-time strength analysis. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
     <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/assets/icons/favicon-512.png" />    <!-- Modular CSS Files -->
     <link rel="stylesheet" href="css/themes.css" />
     <link rel="stylesheet" href="css/main.css" />
