--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />    
     <meta name="twitter:description" content="🔮 Transform memorable phrases into cryptographically strong passwords with real-time strength analysis. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
-    <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/assets/icons/favicon-512.png" />    <!-- Modular CSS Files -->
+    <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/assets/icons/favicon-512.png" />
     <link rel="stylesheet" href="css/themes.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/modal.css" />
