Revert "feat: improve sharing UI and offline fallback"
This reverts commit 430c91a2e9ccf80b26227379051de5cc376d0c1c.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>    <!-- Skip to main content for accessibility -->
     <a href="#main-content" class="skip-to-main">Skip to main content</a>    <!-- Top-right controls -->
     <div class="top-controls" role="toolbar" aria-label="Application Controls">
-        <button id="tutorialsBtn" aria-label="View Cipher Alchemist video playlist" title="Cipher Alchemist Playlist" onclick="window.open('https://www.youtube.com/playlist?list=PLdp4IPkzdGaRCrpmUUV8yO1Xtf412omY-', '_blank')">📺</button>
+        <button id="tutorialsBtn" aria-label="View video tutorials" title="Video tutorials" onclick="window.open('https://www.youtube.com/@dhruvinrsoni', '_blank')">📺</button>
         <button id="installBtn" aria-label="Install app as PWA" title="Install Cipher Alchemist" style="display: none;">📱</button>
         <button id="keyboardHelpBtn" aria-label="Show keyboard shortcuts (Ctrl+?)" title="Keyboard shortcuts (Ctrl+?)" aria-controls="keyboardHelpModal" aria-haspopup="dialog" onclick="showKeyboardHelp()">⌨️</button>
         <button id="themeToggleBtn" aria-label="Toggle theme" title="Toggle theme">🌙</button>
@@ -100,7 +100,7 @@
             Built with ❤️ by Dhruvin Soni
             (<a href="https://github.com/dhruvinrsoni" target="_blank" rel="noopener">@dhruvinrsoni</a>)<br />
             <small>Copyright (c) 2025 Dhruvin Rupesh Soni</small><br />            <a href="https://github.com/dhruvinrsoni/cipher-alchemist" target="_blank" rel="noopener">GitHub Project</a> • 
-            <a href="https://www.youtube.com/playlist?list=PLdp4IPkzdGaRCrpmUUV8yO1Xtf412omY-" target="_blank" rel="noopener">📺 Cipher Alchemist Playlist</a> • 
+            <a href="https://www.youtube.com/@dhruvinrsoni" target="_blank" rel="noopener">📺 Video Tutorials</a> • 
             <a href="https://github.com/dhruvinrsoni/cipher-alchemist/blob/main/docs/FAQ.md" target="_blank" rel="noopener">❓ FAQ</a><br /></footer>    </div>
 
     <!-- Keyboard Shortcuts Help Modal -->
